<resources>
    <string name="app_name">Mock University</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_course">Icon Course</string>
    <string name="trash_icon">trash_icon</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="exams">Exams</string>
    <string name="wishlist">Wishlist</string>
    <string name="account">Account</string>
    <string name="question">question</string>
    <string name="time">time</string>
    <string name="iv_back">iv_back</string>
    <string name="iv_bookrmark_course">iv_bookrmark_course</string>
    <string name="bannercourse">bannerCourse</string>
    <string name="iv_icon_question">icon question</string>

    <string name="total_question">%s Question</string>
    <string name="total_question_detail">%s point for a correct answer</string>
    <string name="total_time">%s hour %s min</string>
    <string name="total_reward">Win %s star</string>
    <string name="answer_all_questions_correctly">Answer all questions correctly</string>
    <string name="total_duration_of_the_quiz">total duration of the quiz</string>

    <string-array name="data_name">
        <item>React JS</item>
        <item>Node JS</item>
        <item>Angular JS</item>
        <item>Vue JS</item>
        <item>Laravel</item>
        <item>Codeigniter</item>
        <item>Spring Boot</item>
        <item>Express JS</item>
        <item>Flask</item>
    </string-array>

    <array name="data_question">
        <item>10</item>
        <item>20</item>
        <item>10</item>
        <item>20</item>
        <item>10</item>
        <item>20</item>
        <item>10</item>
        <item>20</item>
        <item>10</item>
    </array>

    <array name="data_time">
        <item>10</item>
        <item>20</item>
        <item>10</item>
        <item>20</item>
        <item>10</item>
        <item>20</item>
        <item>10</item>
        <item>20</item>
        <item>10</item>
    </array>

    <array name="data_reward">
        <item>100</item>
        <item>200</item>
        <item>100</item>
        <item>200</item>
        <item>100</item>
        <item>200</item>
        <item>100</item>
        <item>200</item>
        <item>100</item>
    </array>

    <array name="data_icon">
        <item>@drawable/icon</item>
        <item>@drawable/icon</item>
        <item>@drawable/icon</item>
        <item>@drawable/icon</item>
        <item>@drawable/icon</item>
        <item>@drawable/icon</item>
        <item>@drawable/icon</item>
        <item>@drawable/icon</item>
        <item>@drawable/icon</item>
    </array>

    <array name="data_banner">
        <item>@drawable/banner</item>
        <item>@drawable/banner</item>
        <item>@drawable/banner</item>
        <item>@drawable/banner</item>
        <item>@drawable/banner</item>
        <item>@drawable/banner</item>
        <item>@drawable/banner</item>
        <item>@drawable/banner</item>
        <item>@drawable/banner</item>
    </array>


</resources>