<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_32dp"
    android:paddingTop="@dimen/margin_16dp"
    tools:context=".CourseFragment">

    <ImageView
        android:id="@+id/iv_iconBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_back"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_titleCourseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toEndOf="@+id/iv_iconBack"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="React JS" />

    <ImageView
        android:id="@+id/iv_bookmark_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_bookrmark_course"
        android:src="@drawable/twotone_bookmark_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bannerCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleCourseTop"
        tools:src="@drawable/banner"
        android:contentDescription="@string/bannercourse" />

    <TextView
        android:id="@+id/tv_titleCourseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_24dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_bannerCourse"
        tools:text="React JS" />


</androidx.constraintlayout.widget.ConstraintLayout>